--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
   "homepage": "https://github.com/FelixLiu553F/fusionx-utils-ts#readme",
   "devDependencies": {
     "@types/jest": "^29.5.4",
-    "jest": "^29.6.4"
+    "jest": "^29.6.4",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.2.2"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
